<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="full_name">Full Name</string>
    <string name="reset">Reset</string>
    <string name="confirm_reservation">Confirm Reservation</string>
    <string name="non_smoking_area">Non Smoking Area</string>
    <string name="smoking_area">Smoking Area</string>
    <string name="table_area">Table Area</string>
    <string name="group_size">Group Size</string>
    <string name="table_reservation">Table Reservation</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_the_size_of_your_group">Enter the size of your group</string>
</resources>